GPC/tests/examples/fail/methodNoObject2.gpc


int GPRM::Test::methodNoObject() {
    
    int x = 5;
    x[2].m1();
    return 0;

}

